All functional tests are now working.
git-svn-id: https://anthrocon-reg.googlecode.com/svn/trunk@276 15c54c5c-d64c-0410-a204-274fbc44fa39

--- a/TODO
+++ b/TODO
@@ -6,6 +6,9 @@ Done
 TODO
 ====
 
+- All numbers in transactions should now be displayed with number_format() or printf().
+	- This appears to be a byproduct of switching the database type from NUMBER(10,2) to FLOAT :-/
+
 - Add "reason on watchlist" to Watchlist
 
 - Port to Drupal 6
